# multi-delegator

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  codama-visitors.mjs  codama.js  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  txtx.yml
.githooks/: pre-push
.github/: CODEOWNERS
.github/workflows/: ci.yml
apps/web/: .env.local.example  next.config.ts  package.json  playwright.config.ts  vercel.json
audits/: AUDIT_STATUS.md
client/: README.md  biome.json  codama.js  package.json  tsup.config.ts
client/src/: client.ts  constants.ts  index.ts  pdas.ts
client/test/: connection.test.ts  delegation-fixed.test.ts  integration.test.ts  query.test.ts  setup.ts
clients/rust/: Cargo.toml
clients/typescript/: README.md  package-lock.json  package.json  tsconfig.json  typedoc.json  vitest.config.ts
docs/: 001-multi-delegator-architecture.md  002-subscriptions-architecture.md  003-versioning-migration-architecture.md  004-program-upgrade-mechanism.md
keys/: multi_delegator-keypair.json
patches/: @wallet-standard__react-core@1.0.1.patch
programs/multi_delegator/: Cargo.toml  build.rs  cu_report.md
programs/multi_delegator/idl/: multi_delegator.json
programs/multi_delegator/src/: constants.rs  errors.rs  event_engine.rs  lib.rs
programs/multi_delegator/src/events/: fixed_transfer.rs  mod.rs  recurring_transfer.rs  subscription_cancelled.rs  subscription_created.rs  subscription_transfer.rs
programs/multi_delegator/src/instructions/: add_delegate.rs  cancel_subscription.rs  close_multidelegate.rs  create_fixed_delegation.rs  create_plan.rs  create_recurring_delegation.rs  delete_plan.rs  emit_event.rs  initialize_multidelegate.rs  mod.rs  revoke_delegation.rs  subscribe.rs  transfer_fixed_delegation.rs  transfer_recurring_delegation.rs  transfer_subscription.rs  update_plan.rs
programs/multi_delegator/src/instructions/helpers/: delegation.rs  mod.rs  plan.rs  program.rs  system.rs  token.rs  traits.rs  transfer_data.rs  transfer_utils.rs  transfer_validation.rs
programs/multi_delegator/src/state/: common.rs  fixed_delegation.rs  header.rs  mod.rs  multi_delegate.rs  plan.rs  recurring_delegation.rs  subscription_delegation.rs  terms.rs
programs/multi_delegator/src/state/versioning/: mod.rs  v1_to_v2.rs
programs/multi_delegator/src/tests/: asserts.rs  constants.rs  cu_tracker.rs  events.rs  idl.rs  mod.rs  pda.rs  utils.rs
runbooks/: README.md
runbooks/deployment/: main.tx  signers.devnet.tx  signers.mainnet.tx
scripts/: common.sh  start-validator.sh  start-webapp.sh
webapp/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
(+174 files in other folders)
