[package]
name = "multidelegator-client"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
num-derive = "0.4"
num-traits = "0.2"

solana-pubkey = { version = "^2", features = ["borsh"] }
solana-instruction = { version = "^2", features = ["borsh"] }
solana-account-info = "^2"
solana-program-error = "^2"
solana-cpi = "^2"

# Serde support
serde = { version = "1.0", features = ["derive"], optional = true }
serde_with = { version = "3.0", optional = true }

[features]
default = []
serde = ["dep:serde", "dep:serde_with"]
fetch = []
anchor = []
anchor-idl-build = []
